# uet

./: Navigator_finger.py  README.md  UART0_Transmitter.c
Experiemental/: Detectoetion_model.py  Detector_table.py  Dimensional_Face_Expression.py  Face_mesh.py  Full_body_landmark.py  GPU_SHOW.ipynb  GPU_TEST.ipynb  OCR.py  Pretrained_model_object_download.py  Scaning_3d.py
Semester5/: Exercise_2.c  Final_Lab_Evaluation.uvguix.dell  Final_Lab_Evaluation.uvoptx  Final_Lab_Evaluation.uvprojx
Semester5/Design of Machine Element/CEA/: 2022_MC_58_CEA.docx  Metric - Spur gear 6M 50T 20PA 3FW ---S50N75H50L60N.SLDPRT  Part1.SLDPRT  PerformanceLog.txt  aseem3-Static 1.BD2  aseem3-Static 1.BDF  aseem3-Static 1.BMC  aseem3-Static 1.MFC  aseem3-Static 1.SL4  aseem3-Static 1.gsz  aseem3.SLDASM  cea.docx  final_assem.SLDASM  final_assem1.SLDASM  g3.SLDPRT  g4.SLDPRT  gearA.SLDPRT  geara1.SLDPRT
Semester5/Design of Machine Element/LAB/: 2022-MCE-58(eval1).SLDPRT  2022_MC_58_lab_10_task2_helical_gear.docx  2022_mc58_lab10.docx  2022mc58(Lab manual 2)-assembly.docx  2022mc58(Lab manual 2)-assembly2.docx  2022mc58(lab manual 2 )-assemblyp2.docx  2022mc58.docx  2022mc58_lab3_2ndhalf.docx  2022mc58lab3.docx  New Microsoft Word Document.docx  evaluation_1.SLDDRW  evaluation_1.SLDPRT  test.c
Semester5/Design of Machine Element/Theory/: DME formulas (final exam) updated.docx  Shafts (session 2022).pptx  aHGJAS (2).docx
Semester5/Design of Machine Element/cep/: Assem1.SLDASM  Assem3.SLDASM  Assem4-Static 1.BD2  Assem4-Static 1.BDF  Assem4-Static 1.MFC  Assem4-Static 1.SL4  Assem4-Static 1.gsz  Assem4.SLDASM  Part1.SLDPRT  Part2.SLDPRT  PerformanceLog.txt  Project report (DME) (session 2022).docx  cep.docx  g1.SLDPRT  g1.STL  g2.SLDPRT  shaft.SLDPRT  sheet.SLDPRT  sheet2.SLDPRT
Semester5/ES-II/: adc_es1.txt  import torch.py
Semester5/ES-II/2022_MC_58_Lab_4/LAB_Example/tmp/lab4task1+Target_1/: CMakeLists.txt  components.cmake  groups.cmake  toolchain.cmake
Semester5/ES-II/2022_MC_58_Lab_4/LAB_Example/tmp/lab4task1+Target_1/src/lab4task1+Target_1-stamp/: lab4task1+Target_1-configure-.cmake  lab4task1+Target_1-source_dirinfo.txt
Semester5/ES-II/2022_MC_58_Lab_4/LAB_Example/tmp/lab4task1+Target_1/tmp/: lab4task1+Target_1-cfgcmd.txt  lab4task1+Target_1-mkdirs.cmake
Semester5/ES-II/ES_II_Lectures/: task1.c  task1.uvguix.dell  task1.uvoptx  task1.uvprojx
Semester5/ES-II/Effect_of_embeded_device/: 2022_mc_58_impact_of_embedded_device_on_society.docx
Semester5/ES-II/Project_ESII/: ES PROJECTpdsprj.pdsprj
Semester5/ES-II/ai/: ar.py  object.py
Semester5/ES-II/extra_task/: 4bitlcd.c  Lab3task2.c  Lab_01_Example_01_Static_String_at_16x2_LCD.c  Lab_02_Example_01_PF4_Falling_Edge_Interrupt.c  Lab_03_Example_01_Toggle_Onboard_LED_using_SysTick.c  Lab_06_Example_01_timer3A_Event_Edge_Counter[1].c  Lab_0_Task_1.c  PF4_Rising_Falling_Edge.c  Push_Button_Edge.c  RISING_FALLING_EDGE.c  project_testing.c
Semester5/Hydraulics & Pneumatics/: 2022MC58-HP_Lab_14.docx  2022MC58-HP_Lab_2.docx  2022MC58-HP_Lab_3.docx  2022MC58-HP_Lab_4.docx  2022MC58-HP_Lab_6.docx  2022MC58-Hydraulics and Pneumatics lab 1.docx  2022_mc_58_lab_week_11.docx  2022_mc_58_week12.docx  2022_mc_58_wek12.docx  New Microsoft Word Document.docx  hydraulics lab 1.docx
Semester5/Listings/: Final_Lab_Evaluation.map
Semester5/Numerical_Analysis(NA)/: 1. MCT (Course Outline Weekly Plan).docx  untitled2.m  week3.m
Semester5/Objects/: Final_Lab_Evaluation.axf  Final_Lab_Evaluation.build_log.htm  Final_Lab_Evaluation.htm  Final_Lab_Evaluation.lnp  Final_Lab_Evaluation_Target_1.dep  exercise_2.crf  exercise_2.d
Semester5/tester/: tester.c  tester.ino  tester.uvguix.dell  tester.uvoptx  tester.uvprojx
(+940 files in other folders)
